--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svelte + TS + Vite App</title>
+    <title>LOMO</title>
   </head>
   <body>
     <div id="app"></div>
